apps/of-the-day/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-of-the-day
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: app-of-the-day.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-of-the-day
            port:
              number: 80
  tls:
  - hosts:
    - app-of-the-day.local
    secretName: app-of-the-day-tls
